# SRT2025

./: .gitignore  CMakeLists.txt
laboratorios/1/: acelerometro.c  blink.c  button.c  sensor.c  servo.c
laboratorios/repaso/: Calculadora.c  Contador.c  Ordenamiento.c  Reloj.c  Semaforo.c
laboratorios/teorico/: converter.c  timer.c
