cmake_minimum_required(VERSION 3.30)
project(STR C)

set(CMAKE_C_STANDARD 11)

add_executable(Calculadora laboratorios/repaso/Calculadora.c)
add_executable(Contador laboratorios/repaso/Contador.c)
add_executable(Ordenamiento laboratorios/repaso/Ordenamiento.c)
add_executable(Semaforo laboratorios/repaso/Semaforo.c)
add_executable(Reloj laboratorios/repaso/Reloj.c)
add_executable(blink laboratorios/1/blink.c)
add_executable(button laboratorios/1/button.c)
